# tcmalloc-rs

./: .bazelrc  .bazelversion  BUILD.bazel  COPY.bara.sky  LICENSE  MODULE.bazel  README.md  buildbuddy.yaml  copy.bara.sky  rbe.bazelrc  tcmalloc_bridge.cc
.aspect/: BUILD.bazel
.aspect/bazelrc/: ci.bazelrc  common.bazelrc  correctness.bazelrc  incompatible.bazelrc  migrate.md  opt.bazelrc  rbe.bazelrc
.aspect/cli/: config.yaml
.buildkite/: BUILD.bazel  annotation.toml
.buildkite/pipelines/: monorepo.yaml  nightly.yaml
.buildkite/steps/: annotate.sh  push.sh  semgrep.sh  spellcheck.sh  trivy.sh  typos.toml
.github/: BUILD.bazel  CODEOWNERS
.github/workflows/: chromatic.yaml
apps/utils/ci/: BUILD.bazel
apps/utils/ci/src/: app.rs  error.rs  main.rs  session.rs
apps/utils/ci/src/commands/: init.rs  lib.rs
apps/utils/ci/src/commands/ci/: annotate.rs  healthcheck.rs  lib.rs
apps/web/docs/: mint.json
apps/web/website/: .gitignore  BUILD.bazel  base.tsconfig.json  package.json  vite.config.ts
apps/web/website/.storybook/: main.ts  preview.ts
apps/web/website/src/routes/: +layout.svelte  +layout.ts
bazel/rbe/: BUILD.bazel
benches/: benchmark.rs
experimental/: BUILD.bazel  container.bzl.disabled  copy.bara.sky
include/tcmalloc_rs/: tcmalloc_bridge.h
infra/images/base/: BUILD.bazel  apko.lock.json  apko.yaml
infra/images/rbe/: BUILD.bazel  apko.lock.json  apko.yaml
libs/bazel/docs/: BUILD.bazel  cargo_deny.md  container.md  defs.md  svelte.md  tar.md  transition.md  upx.md  vite.md
libs/bazel/rules/: BUILD.bazel  defs.bzl
libs/bazel/rules/private/: BUILD.bazel  cargo_deny.bzl  container.bzl  oxlint.bzl  svelte.bzl  tar.bzl  transition.bzl  upx.bzl  vite.bzl
libs/bazel/tests/tar/: BUILD.bazel  analysis.bzl
libs/bazel/tests/upx/: BUILD.bazel  analysis.bzl  bin
libs/javascript/tsconfig_common/: BUILD.bazel  tsconfig.json
libs/proto/command/v1/: BUILD.bazel  command.proto
libs/rust/gallium/: BUILD.bazel
libs/rust/gallium/formatting/: BUILD.bazel
libs/rust/gallium/formatting/src/: lib.rs
libs/rust/gallium/formatting/tests/: remove_markdown.rs  truncate.rs
libs/rust/tcmalloc/src/: lib.rs
libs/shell/: BUILD.bazel  log.sh
rbe/: BUILD.bazel
shim/: BUILD.bazel  wrapper.cpp
src/: lib.rs  profiling.rs  stats.rs  tuning.rs
tools/: BUILD.bazel  bazel  modify_mtree.awk  tools.lock.json  update_codeowners.sh  workspace_status.sh
tools/configure/: rules_cc.star
tools/direnv/: BUILD.bazel
tools/format/: BUILD.bazel
tools/javascript/: BUILD.bazel
tools/lint/: BUILD.bazel  buf.yaml  linters.bzl
