module(
    name = "tcmalloc-rs",
    version = "0.1.0",
)

bazel_dep(name = "abseil-cpp", version = "20260107.0")
bazel_dep(name = "cxx.rs", version = "1.0.194")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "rules_rust", version = "0.68.1")
bazel_dep(name = "tcmalloc")

git_override(
    module_name = "tcmalloc",
    commit = "7723f741304910b8a68568d404c9c0dce2c841a3",
    remote = "https://github.com/google/tcmalloc.git",
)
