"""BUILD definition for the formatter binary

This is in its own package because it has so many loading-time symbols,
we don't want to trigger eager fetches of these for builds that don't want to run format.
"""

load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
load("@npm//:prettier/package_json.bzl", prettier = "bin")
load("@rules_java//java:defs.bzl", "java_binary", "java_import")

package(default_visibility = ["//:__subpackages__"])

prettier.prettier_binary(
    name = "prettier",
    env = {"BAZEL_BINDIR": "."},
    fixed_args = ["--log-level=warn"],
)

genrule(
    name = "jar",
    srcs = ["@multitool//tools/ktfmt"],
    outs = ["ktfmt.jar"],
    cmd = "cp $< $@",
)

java_import(
    name = "ktfmt_import",
    jars = [":jar"],
)

java_binary(
    name = "ktfmt_bin",
    main_class = "com.facebook.ktfmt.cli.Main",
    runtime_deps = [":ktfmt_import"],
)

format_multirun(
    name = "run",
    css = ":prettier",
    go = "@aspect_rules_lint//format:gofumpt",
    html = ":prettier",
    javascript = ":prettier",
    kotlin = ":ktfmt_bin",
    markdown = ":prettier",
    protocol_buffer = "//tools/lint:buf",
    # TODO: buildbuddy workflow images break this as they do not have an up
    # to date enough glibc uncomment once updated.
    #rust = "@rules_rust//tools/upstream_wrapper:rustfmt",
    shell = "@aspect_rules_lint//format:shfmt",
    sql = ":prettier",
    starlark = "@buildifier_prebuilt//:buildifier",
    terraform = "@aspect_rules_lint//format:terraform",
    visibility = ["//:__subpackages__"],
    yaml = "@aspect_rules_lint//format:yamlfmt",
)
