load("@npm//:@sveltejs/kit/package_json.bzl", sveltekit_bin = "bin")
load("@npm//:oxlint/package_json.bzl", oxlint_bin = "bin")
load("@npm//:storybook/package_json.bzl", storybook_bin = "bin")
load("@npm//:svelte-check/package_json.bzl", svelte_check_bin = "bin")
load("@npm//:vite/package_json.bzl", vite_bin = "bin")

vite_bin.vite_binary(
    name = "vite_binary",
    visibility = ["//visibility:public"],
)

svelte_check_bin.svelte_check_binary(
    name = "svelte_check_binary",
    visibility = ["//visibility:public"],
)

sveltekit_bin.svelte_kit_binary(
    name = "sveltekit_binary",
    visibility = ["//visibility:public"],
)

storybook_bin.storybook_binary(
    name = "storybook_binary",
    visibility = ["//visibility:public"],
)

oxlint_bin.oxlint_binary(
    name = "oxlint_binary",
    visibility = ["//visibility:public"],
)
