load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["*.bzl"]),
    visibility = [
        "//libs/bazel/docs:__pkg__",
    ],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//libs/bazel/rules/private:cargo_deny",
        "//libs/bazel/rules/private:container",
        "//libs/bazel/rules/private:svelte",
        "//libs/bazel/rules/private:tar",
        "//libs/bazel/rules/private:transition",
        "//libs/bazel/rules/private:upx",
        "//libs/bazel/rules/private:vite",
    ],
)
