load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["*.bzl"]),
    visibility = [
        "//libs/bazel/docs:__pkg__",
    ],
)

bzl_library(
    name = "tar",
    srcs = ["tar.bzl"],
    visibility = ["//libs/bazel:__subpackages__"],
    deps = ["@aspect_bazel_lib//lib:tar"],
)

bzl_library(
    name = "container",
    srcs = ["container.bzl"],
    visibility = ["//libs/bazel:__subpackages__"],
    deps = [
        ":tar",
        ":transition",
        ":upx",
        "@rules_oci//oci:defs",
    ],
)

bzl_library(
    name = "cargo_deny",
    srcs = ["cargo_deny.bzl"],
    visibility = ["//libs/bazel:__subpackages__"],
)

bzl_library(
    name = "vite",
    srcs = ["vite.bzl"],
    visibility = ["//libs/bazel:__subpackages__"],
    deps = ["@aspect_rules_js//js:defs"],
)

bzl_library(
    name = "svelte",
    srcs = ["svelte.bzl"],
    visibility = ["//libs/bazel:__subpackages__"],
    deps = [
        ":vite",
        "@aspect_rules_js//js:defs",
    ],
)

bzl_library(
    name = "oxlint",
    srcs = ["oxlint.bzl"],
    visibility = ["//libs/bazel:__subpackages__"],
)

bzl_library(
    name = "transition",
    srcs = ["transition.bzl"],
    visibility = ["//libs/bazel:__subpackages__"],
)

bzl_library(
    name = "upx",
    srcs = ["upx.bzl"],
    visibility = ["//libs/bazel:__subpackages__"],
)
